k8-network/default.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  
spec:
  containers:
  - name: nginx
    image: nginx
