k8-network/deny.default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: engineering
spec:
# denying all incoming requests including with in roboshop namespace
  podSelector: {} # all pods
  policyTypes:
    - Ingress
    - Egress
